src/test/testdata/filetypes/skin/errorsAnnotator/errorsAnnotator.skin
{
  Oke: {
    s1: { s: "" }
    s2: { s: "\\" }
    s3: { s: '' }
    s4: { s: '"' }
    s5: { s: '\"' }
    s6: { s: "\\\\\\\\" }
    s7: { s: "\n\r\t\f\u0000\uffff " }
    s8: { s: \"\n\r\t\f\u0000\uffff }
    s9: { s: ''""\n\t;' }
    s10: { s: a/*a*/ }
    s11: { s: "/*a*/" }
    s12: { s: /*a*/\" }
    s13: {
      s: '"\""'/\\"// }
    }
    s14: { s: \n }

    '': {}
    '"': {}
    '\"/a\\: {}
    \\/"'''\u0000\n: {}
    \n: { s: \n }
    \n: { \n: \n }
    \n: \n
    ': { s: ' }
    ': { ': ' }
    \u1234: { \u123a: \u456b }
    (()()([: { s: ()(09[{/\\\t/ }
  }

  NotOke: {
    s1: { s: <error descr="Missing closing quote">" }</error>
    s2: { s: <error descr="Missing closing quote">"\" }</error>
    s3: { s: <error descr="Missing closing quote">"\\\" }</error>

    s4: { s: <error descr="Illegal escape sequence">\p</error> }
    s5: { s: "<error descr="Illegal escape sequence">\u000</error>" }
    s6: { s: <error descr="Illegal escape sequence">\u00g</error>0 }
    s7: { s: '<error descr="Illegal escape sequence">\'</error>' }
    s8: { s: "\\<error descr="Illegal escape sequence">\z</error>" }
    s9: {       fewfgds<error descr="Illegal escape sequence">\h</error>dffv    : "   \\\t<error descr="Illegal escape sequence">\k</error>\ffff" }
  }
}}}}

